Overflow fix, add back button to details page

--- a/src/app/movies/pages/movie-details/movie-details.component.scss
+++ b/src/app/movies/pages/movie-details/movie-details.component.scss
@@ -33,6 +33,13 @@ main.movie-detail {
         display: none;
       }
 
+      .back-button {
+        position: absolute;
+        left: 0;
+        top: 0;
+        margin: 1rem;
+      }
+
       img {
         width: 100%;
       }
